# hetty

./: .gitignore  BatchedChan.hs  Frame.hs  Main.hs  Pub.hs  TCP.hs  Transport.hs  hetty.cabal  hetty.hs  hetty2.hs  stack.yaml
benchmarks/: Chan.hs  Main.hs
src/: Main.hs
src/Control/Concurrent/Chan/Bounded/: Batched.hs
src/Network/Hetty/: Pub.hs  TCP.hs  Transport.hs
src/Network/Hetty/Protocol/: Pub.hs
src/Network/Hetty/Transport/: TCP.hs
tests/: BatchedChan.hs  BatchedChanReadBatch.hs  BatchedChanTryRead.hs  ChanReadBatch.hs  ChanTryRead.hs  Main.hs
