name:                hetty
version:             0.1.0.0
synopsis:            PUB/SUB and REQ/REP framework
author:              Ricardo Catalinas Jiménez
maintainer:          r@untroubled.be
category:            Network
build-type:          Simple
cabal-version:       >=1.20

executable hetty
  ghc-options:         -Wall -threaded
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  GADTs
                     , OverloadedStrings
                     , DeriveFunctor
  build-depends:       base       >=4.8  && <4.9
                     , bytestring >=0.10 && <0.11
                     , socket     >=0.5  && <0.6
                     , binary     >=0.7  && <0.8
                     , unagi-chan >=0.4  && <0.5
                     , containers >=0.5  && <0.6

test-suite batchedchantryread
  ghc-options:         -Wall -threaded
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests, src
  main-is:             BatchedChanTryRead.hs
  default-language:    Haskell2010
  build-depends:       base       >=4.8  && <4.9
                     , bytestring >=0.10 && <0.11
                     , socket     >=0.5  && <0.6
                     , binary     >=0.7  && <0.8
                     , unagi-chan >=0.4  && <0.5
                     , containers >=0.5  && <0.6

test-suite batchedchanreadbatch
  ghc-options:         -Wall -threaded
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests, src
  main-is:             BatchedChanReadBatch.hs
  default-language:    Haskell2010
  build-depends:       base       >=4.8  && <4.9
                     , bytestring >=0.10 && <0.11
                     , socket     >=0.5  && <0.6
                     , binary     >=0.7  && <0.8
                     , unagi-chan >=0.4  && <0.5
                     , containers >=0.5  && <0.6
