name:                hetty
version:             0.1.0.0
synopsis:            PUB/SUB and REQ/REP framework
author:              Ricardo Catalinas Jiménez
maintainer:          r@untroubled.be
category:            Network
build-type:          Simple
cabal-version:       >=1.20

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  GADTs
                     , OverloadedStrings
                     , DeriveFunctor
  exposed-modules:     Control.Concurrent.Chan.Bounded.Batched
  build-depends:       base       >=4.8  && <4.9
                     , bytestring >=0.10 && <0.11
                     , socket     >=0.5  && <0.6
                     , unagi-chan >=0.4  && <0.5
                     , containers >=0.5  && <0.6

executable hetty
  ghc-options:         -Wall -threaded -O2
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , hetty

test-suite hetty-tests
  ghc-options:         -Wall -threaded -O2
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , hetty

benchmark hetty-benchmarks
  ghc-options:         -Wall -threaded -O2
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmarks
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , hetty
                     , criterion
